--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = ""https://justinoeuf.github.io/happy_birthday_maya/""
 languageCode = "en-us"
 title = "Happy Birthday!!"
 theme = "hugo-swift-theme"
