--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = ""https://justinoeuf.github.io/happy_birthday_maya/""
+baseURL = "https://justinoeuf.github.io/happy_birthday_maya/"
 languageCode = "en-us"
 title = "Happy Birthday!!"
 theme = "hugo-swift-theme"
@@ -12,6 +12,8 @@ paginate = 7
 # comment on delete the following lines 11 ~ 13
 pygmentsCodefences = true
 pygmentsCodefencesGuessSyntax = true
+
+publishDir = "docs"
 
 #[params]
   #[params.designer]
