--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 #baseURL = "www.example.com/"
-baseURL = "https://justinoeuf.github.io/happy_birthday_maya/"
+baseURL = "//justinoeuf.github.io/happy_birthday_maya/"
 languageCode = "en-us"
 title = "Happy Birthday!!"
 theme = "hugo-swift-theme"
