--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "hugo-swift-theme"
 
 # author = "Steve Francia"
 #copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
-#canonifyurls = true
+canonifyURLs = true
 paginate = 7
 # Enable syntax highlighting
 # comment on delete the following lines 11 ~ 13
